# dtep-ex

./: Cargo.toml  avr-atmega328p.json  bacon.toml
.cargo/: config.toml
src/: adxl335.rs  main.rs
