[package]
name = "dtep-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = "1.1"
nb = "1.1"
panic-halt = "1.0"
ufmt = "0.2"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal.git"
features = ["arduino-uno", "critical-section-impl"]

[dependencies.heapless]
version = "0.8"
features = ["ufmt"]
